fix : update create learning content